--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,7 +27,7 @@ appName = "customs-declare-exports-frontend"
 play.http.router = testOnlyDoNotUseInAppConf.Routes
 play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 localhost:9250 www.google-analytics.com www.googletagmanager.com tagmanager.google.com data: ssl.gstatic.com www.gstatic.com fonts.gstatic.com fonts.googleapis.com"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 https://www.development.tax.service.gov.uk/assets/ localhost:9250 www.google-analytics.com www.googletagmanager.com tagmanager.google.com data: ssl.gstatic.com www.gstatic.com fonts.gstatic.com fonts.googleapis.com"
 play.filters.csrf.contentType.whiteList = ["application/xml", "application/json"]
 
 play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
@@ -69,6 +69,14 @@ microservice {
     auth {
       host = localhost
       port = 8500
+    }
+
+    contact-frontend {
+      protocol = http
+      host = localhost
+      port = 9250
+      serviceIdentifierGetEori = "CDS"
+      serviceIdentifierGetAccess = "get-access-cds"
     }
 
     customs-declare-exports {
@@ -126,9 +134,9 @@ google-analytics {
 }
 
 assets {
-  version = "3.8.0"
-  url = "http://localhost:9032/assets/"
-  url = ${?ASSETS_URL}
+  version = "3.4.0"
+  version = ${?ASSETS_FRONTEND_VERSION}
+  url = "https://www.development.tax.service.gov.uk/assets/"
 }
 
 contact-frontend {
